This is my Project on weatherApp some changes with svg image and weather image some css file change

--- a/weatherApp.css
+++ b/weatherApp.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url("C:/Users/DEEPAK JAISWAL/Downloads/pexels-andre-furtado-1162251.jpg") ;
+    background-image:url("weatherImg/clearsky.jpg") ;
     background-repeat:no-repeat ;
     background-size: cover;
     height: auto;
